--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 Mongo_uri = mongodb+srv://oa3973392:Uq5fax9AD0t235lZ@cluster0.jevdh.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 PORT = 3001
+SECRET_KEY = 'abcdefghijklmnopqrstuvwxyz1234567890$!@#=))((***))'
